tests/bad/nonlinear_let.ppl
let n = Zero in (let a = n in let b = n in ())
